--- a/Arbol_Huffman/nbproject/project.properties
+++ b/Arbol_Huffman/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Arbol_Huffman
-main.class=arbol_huffman.Arbol_Huffman
+main.class=arbol_huffman.ArbolHuffman
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
